--- a/index.css
+++ b/index.css
@@ -3,7 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Open Sans", sans-serif;
+}
 
+.header {
+  background: radial-gradient(#fff, #ffd6d6);
+}
 .container {
   max-width: 1300px;
   margin: auto;
@@ -38,7 +44,74 @@
   margin-right: 20px;
 }
 
+p {
+  color: #555;
+}
+a {
+  text-decoration: none;
+  color: #555;
+}
+.header .row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.col2 {
+  flex-basis: 50%;
+}
+
 .col2 img {
   max-width: 100%;
   padding: 50px 0;
+}
+
+.col2 h1 {
+  font-size: 60px;
+  line-height: 60px;
+  margin: 25px 0;
+}
+
+.col2 .explore-button {
+  display: inline-block;
+  margin: 20px;
+  padding: 8px 30px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+  background-color: tomato;
+}
+
+.header .row {
+  margin-top: 70px;
+}
+
+.col2 .explore-button:hover {
+  background-color: #567856;
+}
+
+.categories {
+  margin: 70px 0px;
+}
+
+.col-3 {
+  flex-basis: 30%;
+  min-width: 250px;
+  margin-bottom: 30px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+}
+.col-3 img {
+  max-width: 100%;
+}
+
+.small-categories {
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
 }
