offer container added

--- a/index.css
+++ b/index.css
@@ -161,3 +161,14 @@ h4 {
 .col-4:hover {
   transform: translateY(-5px);
 }
+
+.col-2 img {
+  width: 100%;
+}
+.col2 .offer-img {
+  padding: 50px;
+}
+
+small {
+  color: #555;
+}
